# blogbackend

./: .env.local  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
backend/: package-lock.json  package.json
backend/markdowns/: Test.md
backend/pages/: index.js
backend/pages/api/: markdown.js
backend/pages/markdown/: [slug].js
public/articles/: Article 1.md  Article1.md  Article2.md  Article3.md  Test2.md
src/blogbackend/: app.py
src/blogbackend/templates/: index.html
