[project]
name = "blogbackend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Atr1ck", email = "3126670240@qq.com"},
]
dependencies = ["flask>=3.1.0", "markdown>=3.7", "python-frontmatter>=1.1.0", "flask-cors>=5.0.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
